@@ -1,0 +1,2 @@
+Site URL: https://celebsroulette.com/
+DMCA: https://celebsroulette.com/ (DMCA, SUPPORT)
