@@ -1,3 +1,5 @@
 [B]Version 1.1.75[/B]
 Aagmaal Pro - fix thumbnails
 Desi Porn - Domain change
+Chaturbate - tags sorted alphabetically
+CelebsRoulette - new site
